--- a/www/index.html
+++ b/www/index.html
@@ -1,36 +1,29 @@
-<html ng-app="RBGIOHPEApp">
+<!doctype html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>GUSTILO CLINIC and AMBULATORY SURGERY CENTER</title>
-
-    <link href="css/all.css" rel="stylesheet" type="text/css" media="all"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/tablex.css" rel="stylesheet"  type="text/css" />
-
-    <script src="lib/jquery-1.7.1.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/jquery.min.js" type="text/javascript"></script>
-    <script src="lib/jquery.main.js" type="text/javascript"></script>
-
+    <script src="lib/jquery-1.11.1.min.js"></script>
     <script src="lib/angular-1.2.18.min.js"></script>
-    <script src="lib/angular-route.min.js"></script>
+    <script src="jaydata-1.3.6/jaydata.js"></script>
 
-    <script src="js/app.js"></script>
-    <script src="js/txControllers.js"></script>
+    <script src="controller.js"></script>
   </head>
-  <body>
-    
-    <div class="row">
-
-      <div class="col-xs-12 col-sm-2 bs-docs-container" id="topLeft">
-          <ng:include src="'tpl/today_nav.html'"></ng:include>
-      </div>
-
-      <div class="col-xs-12 col-sm-10" id="mainContent">
-          
-
-        <ng:view>       </ng:view>
-      </div>
+<body>
+<div ng-app>
+     <h1>Todo list - store items to local database</h1>
+    <div ng-controller="TodoCtrl">
+        <label>Task:</label>
+        <input ng-model="newTodo.task" />
+        <label>Completed:</label>
+        <input type="checkbox" ng-model="newTodo.done" />
+        <a href="#" ng-click="addNew(newTodo)">Add new</a>
+        <br />Search: <input ng-model="search" />
+        <table>
+            <tr ng-repeat="todo in todos">
+                <td>{{todo.Id}}</td><td>{{todo.task}}</td><td>Completed:
+                <input type="checkbox" ng-model="todo.done" ng-click="todo.save()" /></td> <td> 
+                <a href="#" ng-click="remove(todo)">Remove item</a></td>
+            </tr>
+        </table>
     </div>
-  </body>
+</div>
 </html>
