--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,32 @@
-
-<html ng-app="RBGIOHPEApp">
-  <head>
+<html ng-app>
+<head>
     <meta charset="utf-8">
-    <title>GUSTILO CLINIC and AMBULATORY SURGERY CENTER</title>
-
-    <link href="css/all.css" rel="stylesheet" type="text/css" media="all"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/tablex.css" rel="stylesheet"  type="text/css" />
-
-    <script src="lib/jquery-1.7.1.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/jquery.min.js" type="text/javascript"></script>
-    <script src="lib/jquery.main.js" type="text/javascript"></script>
-
+    <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
+    <script src="lib/jaydata-1.3.6/jaydata.min.js"></script>
+    <script src="lib/jaydata-1.3.6/jaydataproviders/SqLiteProvider.min.js"></script>
     <script src="lib/angular-1.2.18.min.js"></script>
-    <script src="lib/angular-route.min.js"></script>
-    <script src="lib/angular-resource.min.js" type="text/javascript"></script>
+    <script src="model.js"></script>
+    <script src="app.js"></script>
+</head>
 
-    <script src="js/app.js"></script>
-    <script src="js/txControllers.js"></script>
-    <script src="js/services.js" type="text/javascript"></script>
+<body ng-controller="DataController">
+<h1>WALTER'S TEST</h1>
+<h1>RESTFUL API, wfseballos, Aug 29, 2014</h1>
+<br/>
+<p>Extract px_data REST from server and store to Web SQL</p>
+<button ng-click="pullData()">Pull Data From Server</button>
+
+<p><a href="vw.px_data.html">My List</a></p>
+
+<br/>
+<p>Show Data</p>
+<div ng-repeat="row in px_data">
+	<p>{{row.PxRID}} - {{row.pxname}} - {{row.Address}} - {{row.pxstatus}} - {{row.pxregdate}} - {{row.Foto}}</p>
+	<hr>
+</div>
+
+</body>
+</html>/services.js" type="text/javascript"></script>
   </head>
   <body>
     
